--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -6,4 +6,5 @@
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
     <h1> test </h1>
+    <h2> delete </h2>
 </div>
